--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,18 +43,55 @@ jobs:
     docker: 
       - image: circleci/node:13.8.0
     steps:
+      - checkout
       - restore_cache:
           name: Restore npm package cache
           keys:
           - v1-npm-deps-
-
-      - checkout
       - run:
           name: test-backend
           command: |
-                cd backend
-                npm install 
-                npm run test
+              cd backend
+              npm install
+              npm run test
+      
+
+
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore npm package cache
+          keys:
+          - v1-npm-deps-
+      - run:
+          name: scan-frontend
+          command: |
+              cd frontend
+              npm audit --audit-level=critical
+
+
+
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          name: Restore npm package cache
+          keys:
+          - v1-npm-deps-
+      - run:
+          name: scan-backend
+          command: |
+              cd backend
+              npm audit --audit-level=critical
+              
+
+
+
 
 
 
@@ -68,3 +105,7 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
+      - scan-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
